# quicksilver

./: .gitignore  README.md  WORKSPACE
projects/calculator/: BUILD.bazel  calculator_test.py
projects/go_hello_world/: BUILD.bazel
projects/go_web/: BUILD.bazel  main.go
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
