py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    # visibility = ["//projects/python_web:__pkg__"],
    visibility = ["//visibility:public"]
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [
        "//projects/calculator:calculator",
    ]
)